--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
-h1 {
-  color: green;
+body {
+  padding: 100px;
+}
+
+.title {
+  color: purple;
+  text-align: center;
+}
+
+.post {
+  border: 1px solid gray;
+  padding: 10px;
+  margin: 10px;
+}
+
+.post-title {
+  color: gray;
 }
